tests/kulezi_tests/good/error_is_return04.lat
int main() {
    if (true) error();
    return 0;
}