tests/kulezi_tests/bad/invalid_op012.lat
int main() {
    true<true;


    return 0;
}